# mega-evm-master-control

./: .coverage  .coveragerc  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_ADDON_DAY1.md  SECURITY.md  bandit.yaml  codecov.yml  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  ci_day1.yml
data/samples/: cost_erp.csv  evm_sample.csv  procurement.csv  risk_register.csv  schedule_activities.csv
docs/: OPERATIONS.md  architecture.md
etl/: evm_calculator.py  monte_carlo.py  p6_ingest.py  procurement_join.py
scripts/: run_app.bat  run_etl.bat
services/: ai_variance_narratives.py  alerts.py  evm_metrics.py
streamlit_app/: app.py  bandit.yml
tests/: conftest.py  test_ai_variance_narratives_smoke.py  test_ai_variance_smoke.py  test_alerts_append_mode.py  test_alerts_edge_cases.py  test_alerts_full_coverage.py  test_alerts_no_triggers_writes_empty.py  test_alerts_outbox_path.py  test_alerts_smoke.py  test_evm.py  test_evm_calculator_cli.py  test_evm_calculator_core.py  test_evm_calculator_edge.py  test_evm_calculator_edge_cases.py  test_evm_calculator_edges.py  test_evm_calculator_last_edges.py  test_evm_calculator_more_edges.py  test_evm_compute.py  test_evm_golden.py  test_imports.py  test_monte_carlo_edge_cases.py  test_monte_carlo_full_coverage.py  test_monte_carlo_missing_risk_cols.py  test_monte_carlo_no_procurement.py  test_monte_carlo_proc_branch.py  test_monte_carlo_smoke.py  test_monte_carlo_with_procurement.py  test_p6_ingest_smoke.py  test_procurement_join_smoke.py
